# demo_practice

./: .env  .gitignore  Guide.md  README.md  pyproject.toml  ruff.toml
configs/: config_default.yaml
docs/: api.rst  conf.py  config.rst  index.rst
simple_lightning_classifier/: README.md
simple_lightning_classifier/src/simple_lightning_classifier/: config.py  datamodule.py  model.py
src/simple_lightning_classifier/: config.py  datamodule.py  model.py
tests/: conftest.py  test_config.py  test_model.py
