[tool.poetry]
name = "simple_lightning_classifier" # distribution name on PyPI
version = "0.1.0"
description = "Toy binary classification demo package"
authors = ["Pierre Massey <pierremassey1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "simple_lightning_classifier", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = ">=2.3.5,<3.0.0"
lightning = ">=2.6.0,<3.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
pydantic = "^2.7"
pydantic-settings = "^2.12.0"
dvc = "^3.64.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.0"
sphinx = "^7.0"
sphinx-autodoc-typehints = "^2.0"
sphinx-rtd-theme = "^2.0"
ruff = "^0.14.7"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"